[tool.poetry]
name = "paladin-be"
version = "0.1.0"
description = ""
authors = ["Paulo <paultergust@gmail.com>"]
readme = "README.md"
packages = [{include = "paladin_be"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.108.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
